fix: harden mail recipient delivery and persistence